--- a/app/src/main/res/layout/first_fragment.xml
+++ b/app/src/main/res/layout/first_fragment.xml
@@ -72,7 +72,7 @@
         app:layout_constraintVertical_bias="0.061" />
 
     <TimePicker
-        android:id="@+id/datePicker1"
+        android:id="@+id/timePicker"
         android:layout_width="230dp"
         android:layout_height="157dp"
         android:layout_marginStart="90dp"
@@ -88,12 +88,12 @@
         app:layout_constraintVertical_bias="0.28" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="39dp"
         android:layout_marginBottom="36dp"
-        android:text="Button"
+        android:text="Suivant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
